--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ importlib-metadata==4.11.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+psycopg2==2.9.3
 SQLAlchemy==1.4.31
 typing-extensions==4.1.1
 Werkzeug==2.0.3
