--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,24 @@ services:
     restart: always
     env_file: .env
     build: .
+    entrypoint:
+      - flask
+      - run
+      - --host=0.0.0.0
+      - --extra-files=templates/:static/
+    environment:
+      FLASK_DEBUG: "on"
+      FLASK_APP: ./run.py
+    ports: 
+      - '5000:5000'
+    volumes:
+      - '.:/usr/src/app'
     networks:
       - db_network
       - web_network
+    depends_on:
+      - postgres
+
   nginx:
     container_name: nginx
     restart: always
@@ -20,9 +35,25 @@ services:
       - web_network
     depends_on: 
       - appseed-app
+
+  postgres:
+    image: postgres
+    environment:
+      POSTGRES_USER: appseed
+      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: appseed-flask
+    ports:
+      - "5432:5432"
+    networks:
+      - db_network
+    volumes:
+      - db_volume:/var/lib/postgresql/data
+
 networks:
   db_network:
     driver: bridge
   web_network:
     driver: bridge
- 
+
+volumes:
+  db_volume: {}
