--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 alembic==1.7.6
 aniso8601==9.0.1
+asgiref==3.5.0
+async-timeout==4.0.2
+asyncio==3.4.3
+asynctest==0.13.0
 attrs==21.4.0
+azure-cognitiveservices-vision-computervision==0.9.0
+azure-common==1.1.28
 azure-core==1.22.1
 azure-storage-blob==12.9.0
 certifi==2021.10.8
@@ -16,6 +24,7 @@ Flask-Migrate==3.1.0
 flask-restx==0.5.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
+frozenlist==1.3.0
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
@@ -28,6 +37,7 @@ jsonschema==4.4.0
 Mako==1.1.6
 MarkupSafe==2.0.1
 msrest==0.6.21
+multidict==6.0.2
 oauthlib==3.2.0
 psycopg2==2.9.3
 pycparser==2.21
@@ -43,4 +53,5 @@ typing_extensions==4.1.1
 urllib3==1.26.8
 Werkzeug==2.0.3
 WTForms==3.0.1
+yarl==1.7.2
 zipp==3.7.0
